[tool.poetry]
name = "hippius"
version = "0.1.0"  # Initial version
description = "Hippius IPFS Miner Service"
authors = ["Faiz <faiz@example.com>"]  # Replace with your actual name and email
license = "MIT"
readme = "README.md"
packages = [{include = "hippius"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
aiohttp = "^3.8.1"
substrate-interface = "^1.7.0"
coloredlogs = "^15.0.1"
packaging = "^24.0"
aiosqlite = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"